RESOLVED FIXED158729
REGRESSION (r151608): Leak of QTMovieLayer or AVPlayerLayer in -[WebVideoFullscreenController setVideoElement:]
https://bugs.webkit.org/show_bug.cgi?id=158729
Summary REGRESSION (r151608): Leak of QTMovieLayer or AVPlayerLayer in -[WebVideoFull...
David Kilzer (:ddkilzer)
Reported 2016-06-14 01:28:21 PDT
-[WebVideoFullscreenController setVideoElement:] leaks either a QTMovieLayer or AVPlayerLayer depending on the type of video. Regressed in r151608: Bug 117597: Add support for AVFoundation-backed HTMLMediaElements in the WebVideoFullScreenController. <https://bugs.webkit.org/show_bug.cgi?id=117597> <http://trac.webkit.org/changeset/151608>
Attachments
Patch v1 (3.98 KB, patch)
2016-06-14 01:37 PDT, David Kilzer (:ddkilzer)
no flags
David Kilzer (:ddkilzer)
Comment 1 2016-06-14 01:37:16 PDT
Created attachment 281246 [details] Patch v1
WebKit Commit Bot
Comment 2 2016-06-14 06:09:20 PDT
Comment on attachment 281246 [details] Patch v1 Clearing flags on attachment: 281246 Committed r202041: <http://trac.webkit.org/changeset/202041>
WebKit Commit Bot
Comment 3 2016-06-14 06:09:24 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.