REGRESSION (r151608): Leak of QTMovieLayer or AVPlayerLayer in -[WebVideoFullscreenController setVideoElement:] <https://webkit.org/b/158729>

Reviewed by Eric Carlson.

* platform/mac/WebVideoFullscreenController.mm:
(-[WebVideoFullscreenController setVideoElement:]): Use
RetainPtr<> to prevent leaks.
* platform/mac/WebVideoFullscreenHUDWindowController.mm:
Drive-by fix to remove unused <wtf/RetainPtr.h> import.


Canonical link: https://commits.webkit.org/176820@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@202041 268f45cc-cd09-0410-ab3c-d52691b4dbfc